# SuperShop

./: Cargo.toml
migrations/: 20251106163726_create-user.sql  20251106174743_create-prime-user.sql  20251106175715_create-user-credentials-table.sql  20251106181634_user-email-not-null.sql  20251108151037_user-credentialw-table-column-update.sql  20251108154302_add_time_stamp_to_credential.sql  20251109053532_hashed_password_field_rename.sql  20251115133550_create-organizaton-table.sql  20251115135116_create-organization_branches-table.sql  20251115153013_branch-public-id-trigger-fix.sql  20251115154050_rename-table-branch-pubic-counter.sql  20251120070840_organization_staff_table.sql  20251120072538_organization_staff_table_fix_1.sql  20251120073636_role_and_permission_table.sql  20251120075703_role_and_permission_table_fix_1.sql  20251120080854_staff_roles_table.sql  20251120122647_populate_admin_role.sql  20251120125739_populate_prime_data_1.sql
src/: common_types.rs  lib.rs  main.rs
src/config/: app_state.rs  auth_state.rs  db_config.rs  load_env.rs  mod.rs
src/dto/: auth_dto.rs  common.rs  mod.rs  user_dto.rs
src/handlers/: auth_extractor.rs  auth_handler.rs  mod.rs  organization_handler.rs  user_handler.rs
src/models/: mod.rs  organization_branch_model.rs  organization_model.rs  role_and_permission_model.rs  user_credential_model.rs  user_model.rs
src/repositories/: branch_repository.rs  mod.rs  organization_repository.rs  user_repository.rs
src/repository_traits/: branch_repository_trait.rs  mod.rs  organization_repository_trait.rs  (+1 more)
src/routes/: mod.rs  (+4 more)
(+8 files in other folders)
