[package]
name = "super_shop"
version = "0.1.0"
edition = "2024"

[lib]
name = "super_shop_backend"
path = "src/lib.rs"

[[bin]]
name = "super_shop"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.6" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
dotenvy = { version = "0.15.7" }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono", "migrate", "macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
anyhow = { version = "1.0.100" }
uuid = { version = "1.18.1", features = ["v4"] }
async-trait = "0.1.89"
thiserror = { version = "2.0.17" }
bcrypt = { version = "0.17.1" }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }